# fastmlm

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  cleanup  config.status  configure  configure.ac  configure~
R/: RcppExports.R  cache.R  compat.R  fastmlm-package.R  fglmm.R  fglmm_class.R  fmlm.R  fmlm_class.R  fmlm_control.R  formula_parse.R  methods.R  zzz.R
autom4te.cache/: output.0  requests  traces.0
inst/: CITATION
inst/paper/: fastmlm-jss.Rmd  references.bib
inst/paper/fastmlm-jss_cache/latex/: __packages  benchmarks_49082c8f62223f6054a3554bbec7e963.RData  validation_ffcb69e983780e5bd9a194b6e76b7f51.RData
man/: VarCorr.Rd  anova.fmlmMod.Rd  broom-support.Rd  build_re_structures.Rd  cache_get.Rd  cache_key.Rd  cache_put.Rd  check_convergence.Rd  data_fingerprint.Rd  emmeans-support.Rd  extract_bars.Rd  fast_lFormula.Rd  fastmlm-package.Rd  fastmlm_benchmark_blas.Rd  fastmlm_blas_info.Rd  fastmlm_clear_cache.Rd  fastmlm_set_threads.Rd  fglmm.Rd  fglmmMod-class.Rd  fixef.Rd  fmlm.Rd  fmlmMod-class.Rd  fmlm_control.Rd  profile_ci_theta.Rd  ranef.Rd  reexports.Rd  remove_bars.Rd  satterthwaite_df.Rd  simulate.fmlmMod.Rd  update.fmlmMod.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  autodiff.cpp  autodiff.h  blas_detect.cpp  blas_detect.h  cholmod_stubs.c  cholmod_wrapper.cpp  cholmod_wrapper.h  crossed_re.cpp  crossed_re.h  fastmlm_api.cpp  fastmlm_types.h  glmm_deviance.cpp  glmm_deviance.h  gpu_backend.cpp  gpu_backend.h  gpu_backend_stub.cpp  lbfgsb.cpp  lbfgsb.h  model_data.cpp  model_data.h  parallel_ops.cpp  parallel_ops.h  profiled_deviance.cpp  profiled_deviance.h  sparse_cholesky.cpp  sparse_cholesky.h  theta_optimizer.cpp  theta_optimizer.h  vcov_hessian.cpp  vcov_hessian.h
tests/: testthat.R
tests/testthat/: test-against-lme4.R  test-basic-fit.R  test-compat.R  test-crossed-re.R  test-edge-cases.R  test-glmm.R  test-lme4-parity.R  test-reml-ml.R  test-splines.R
vignettes/: fastmlm-benchmarks.Rmd  fastmlm-intro.Rmd
